修改：新增刀具时id自增；用时分析饼图和表格分页展示

--- a/src/main/resources/templates/addCutter.html
+++ b/src/main/resources/templates/addCutter.html
@@ -48,8 +48,8 @@
                                         <div class="col-lg-6 m-0">
                                             <div class="form-group">
                                                 <label for="Input1">刀具编号</label>
-                                                <input type="text" class="form-control" id="Input1"
-                                                       placeholder="" name="cutterId">
+                                                <input type="text" class="form-control" id="Input1" readonly="readonly"
+                                                      th:placeholder="${number}" name="cutterId" th:value="${number}">
                                             </div>
                                             <div class="form-group">
                                                 <label for="Input2">刀具类型</label>
