--- a/src/main/resources/templates/cutter.html
+++ b/src/main/resources/templates/cutter.html
@@ -45,24 +45,23 @@
 
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="row m-0" style="height: 34px">
-                            <div class="button-items">
-                                <button type="button" class="btn btn-primary waves-effect waves-light"><a class="text-white" th:href="@{/addCutter}">新增刀具
-                                </a></button>
-
-                                <button type="button" class="btn btn-info waves-effect waves-light"><a class="text-white" th:href="@{/byCutterType}">根据刀具型号查找 </a></button>
-                                <button type="button" class="btn btn-info waves-effect waves-light"><a class="text-white" th:href="@{/byCutterCategory}">根据刀具类型查找 </a></button>
-                                <button type="button" class="btn btn-info waves-effect waves-light"><a class="text-white" th:href="@{/byDeviceId}">根据设备编号查找 </a></button>
-                                <button type="button" class="btn btn-info waves-effect waves-light"><a class="text-white" th:href="@{/byCutterLocation}">根据刀具刀位查找 </a></button>
-                                <button type="button" class="btn btn-info waves-effect waves-light"><a class="text-white" th:href="@{/byLifeState}">根据寿命状态查找 </a></button>
-
-
-                            </div>
-
-
-                        </div>
                         <div class="card">
                             <div class="card-body  pt-0">
+                                <div class="col-lg-12">
+                                    <div class="row m-0" style="height: 34px">
+                                        <div class="button-items">
+                                            <button type="button" class="btn btn-primary waves-effect waves-light"><a class="text-white" th:href="@{/addCutter}">新增刀具
+                                            </a></button>
+
+                                            <button type="button" class="btn btn-info waves-effect waves-light"><a class="text-white" th:href="@{/byCutterType}">根据刀具型号查找 </a></button>
+                                            <button type="button" class="btn btn-info waves-effect waves-light"><a class="text-white" th:href="@{/byCutterCategory}">根据刀具类型查找 </a></button>
+                                            <button type="button" class="btn btn-info waves-effect waves-light"><a class="text-white" th:href="@{/byDeviceId}">根据设备编号查找 </a></button>
+                                            <button type="button" class="btn btn-info waves-effect waves-light"><a class="text-white" th:href="@{/byCutterLocation}">根据刀具刀位查找 </a></button>
+                                            <button type="button" class="btn btn-info waves-effect waves-light"><a class="text-white" th:href="@{/byLifeState}">根据寿命状态查找 </a></button>
+                                        </div>
+                                    </div>
+                                </div>
+
                                 <div class="table-responsive">
                                     <table class="table table-centered datatable dt-responsive nowrap table-bordered border"
                                            style="border-collapse: collapse; border-spacing: 0; width: 100%;">
