--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>工业大数据平台</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="This is an industrial big data platform page" name="description" />
+    <meta content="This is an industrial big data platform page" name="description"/>
     <link rel="shortcut icon" href="../static/images/favicon.ico"><!-- Bootstrap Css -->
-    <link href="../static/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css"/><!-- Icons Css -->
+    <link href="../static/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css"/>
+    <!-- Icons Css -->
     <link href="../static/css/icons.min.css" rel="stylesheet" type="text/css"/><!-- App Css-->
     <link href="../static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css"/>
     <link href="../static/css/diy.css" rel="stylesheet" type="text/css"/>
@@ -24,47 +25,49 @@
                                 <div>
                                     <div class="text-center">
                                         <div><a href="#" class="logo"><img src="../static/images/logo-light3.png"
-                                                                                    height="90" alt="logo"></a></div>
-<!--                                        <h5 class="font-size-16 mt-4">欢迎回来！</h5>-->
+                                                                           height="90" alt="logo"></a></div>
+                                        <!--                                        <h5 class="font-size-16 mt-4">欢迎回来！</h5>-->
                                         <p class="text-muted">欢迎回来！请登录</p></div>
                                     <div class="p-2 mt-5">
                                         <form class="form-horizontal" method="post" action="/login" id="loginForm">
                                             <div class="form-group auth-form-group-custom mb-4"><i
                                                     class="ri-user-2-line auti-custom-input-icon"></i><label
                                                     for="uname">用户名</label><input type="text"
-                                                                                          class="form-control"
-                                                                                          name="username"
-                                                                                          id="uname"
-                                                                                          placeholder="输入用户名">
+                                                                                  class="form-control"
+                                                                                  name="username"
+                                                                                  id="uname"
+                                                                                  placeholder="输入用户名">
                                             </div>
                                             <div class="form-group auth-form-group-custom mb-4"><i
                                                     class="ri-lock-2-line auti-custom-input-icon"></i><label
                                                     for="upwd">密码</label><input type="password"
-                                                                                              class="form-control"
+                                                                                class="form-control"
                                                                                 name="password"
-                                                                                              id="upwd"
-                                                                                              placeholder="输入密码">
+                                                                                id="upwd"
+                                                                                placeholder="输入密码">
                                                 <span id="msg" style="font-size: 12px;color: red"></span>
                                             </div>
 
-<!--                                            <div class="custom-control custom-checkbox"><input type="checkbox"-->
-<!--                                                                                               class="custom-control-input"-->
-<!--                                                                                               id="customControlInline"><label-->
-<!--                                                    class="custom-control-label" for="customControlInline">记住密码</label></div>-->
+                                            <div class="custom-control custom-checkbox"><input type="checkbox"
+                                                                                               class="custom-control-input"
+                                                                                               id="customControlInline"
+                                                                                               name="remember"><label
+                                                    class="custom-control-label" for="customControlInline">记住密码</label>
+                                            </div>
                                             <div class="mt-4 text-center">
                                                 <button class="btn btn-primary w-md waves-effect waves-light"
                                                         type="button" id="loginBtn">登录
                                                 </button>
                                             </div>
-<!--                                            <div class="mt-4 text-center"><a href="auth-recoverpw.html"-->
-<!--                                                                             class="text-muted"><i-->
-<!--                                                    class="mdi mdi-lock mr-1"></i>忘记密码?</a></div>-->
+                                            <!--                                            <div class="mt-4 text-center"><a href="auth-recoverpw.html"-->
+                                            <!--                                                                             class="text-muted"><i-->
+                                            <!--                                                    class="mdi mdi-lock mr-1"></i>忘记密码?</a></div>-->
                                         </form>
                                     </div>
-<!--                                    <div class="mt-5 text-center"><p>还没有账户 ? <a-->
-<!--                                            href="auth-register.html"-->
-<!--                                            class="font-weight-medium text-primary">注册 </a></p>-->
-<!--                                    </div>-->
+                                    <!--                                    <div class="mt-5 text-center"><p>还没有账户 ? <a-->
+                                    <!--                                            href="auth-register.html"-->
+                                    <!--                                            class="font-weight-medium text-primary">注册 </a></p>-->
+                                    <!--                                    </div>-->
                                 </div>
                             </div>
                         </div>
@@ -81,14 +84,14 @@
 </div><!-- JAVASCRIPT -->
 <script src="../static/libs/jquery/jquery.min.js"></script>
 <script>
-    $('#loginBtn').click(function(){
-        let uname=$("#uname").val();
-        let upwd=$("#upwd").val();
-        if(isEmpty(uname)){
+    $('#loginBtn').click(function () {
+        let uname = $("#uname").val();
+        let upwd = $("#upwd").val();
+        if (isEmpty(uname)) {
             $("#msg").html("用户名不可为空！");
             return;
         }
-        if(isEmpty(upwd)){
+        if (isEmpty(upwd)) {
             $("#msg").html("用户密码不可为空！");
             return;
         }
@@ -99,8 +102,8 @@
     /**
      * 判断字符串是否为空，为空返回true，否则返回false
      */
-    function isEmpty(str){
-        if(str == null || str.trim() == ""){
+    function isEmpty(str) {
+        if (str == null || str.trim() == "") {
             return true;
         }
         return false;
