--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,20 +50,20 @@
                             </div>
                             <div>
                                 &nbsp;&nbsp;<span class=" ri-stop-mini-fill" style="color: #ff1741"></span>&nbsp;&nbsp;停机<span
-                                    class="float-right" style="margin-right:20px">3</span>
+                                    class="float-right" style="margin-right:20px" th:text="${sumStop}">3</span>
                                 <hr style="margin:5px"/>
                                 &nbsp;&nbsp;<span class=" ri-play-mini-fill" style="color: #2bdfaa"></span>&nbsp;&nbsp;运行<span
-                                    class="float-right" style="margin-right:20px">5</span>
+                                    class="float-right" style="margin-right:20px" th:text="${sumOperate}">5</span>
                                 <hr style="margin:5px"/>
                                 &nbsp;&nbsp;<span class=" ri-record-circle-line" style="color: #efe24b"></span>&nbsp;&nbsp;空闲<span
-                                    class="float-right" style="margin-right:20px">4</span>
+                                    class="float-right" style="margin-right:20px" th:text="${sumFree}">4</span>
                                 <hr style="margin:5px"/>
                                 &nbsp;&nbsp;<span class="dripicons-code"
                                                   style="color: #0a83ff"></span>&nbsp;&nbsp;设定<span class="float-right"
-                                                                                                    style="margin-right:20px">0</span>
+                                                                                                    style="margin-right:20px" th:text="${sumSet}">0</span>
                                 <hr style="margin:5px"/>
                                 &nbsp;&nbsp;<span class="ri-wifi-off-fill"></span>&nbsp;&nbsp;离线<span
-                                    class="float-right" style="margin-right:20px">2</span>
+                                    class="float-right" style="margin-right:20px" th:text="${sumOff}">2</span>
                                 <hr style="margin:5px"/>
                             </div>
                         </div>
