--- a/src/main/resources/templates/cloudPages/products.html
+++ b/src/main/resources/templates/cloudPages/products.html
@@ -16,6 +16,7 @@
     <link href="../../static/cloudStatic/static/css/pace.min.css" rel="stylesheet" />
     <script src="../../static/cloudStatic/static/js/pace.min.js"></script>
     <script src="../../static/cloudStatic/static/js/echarts.js"></script>
+    <script src="../../static/cloudStatic/static/js/graph/outputAnalysis.js"></script>
     <!-- Bootstrap CSS -->
     <link href="../../static/cloudStatic/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
@@ -473,8 +474,28 @@
                     <hr>
                     <div class="card">
                         <div class="card-body">
+
+                            <div class="row">
+                                <div class="col-lg-1">
+                                    <h6 class="">范围查找</h6>
+                                    <hr>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <!--                                    查询-->
+                                <form class="form-inline" method="post" th:action="@{/cloud_products}">
+                                    <label for="startTime" class="mr-1">输入开始日期</label>
+                                    <input type="date" class="form-control-sm" id="startDate" name="startDate">
+
+                                    <label for="endTime" class="mr-1">&nbsp;&nbsp;&nbsp;&nbsp;输入截至日期</label>
+                                    <input type="date" class="form-control-sm" id="endDate" name="endDate">
+                                    <button type="submit" class="btn btn-primary">查询</button>
+                                </form>
+                                <hr class="mt-2">
+                            </div>
+                            <div  style="max-height:500px;overflow-y:auto">
                             <table class="table table-hover table-bordered table-striped"
-                                   style="width: 800px;height:400px;margin-left: 140px">
+                                   style="width: 800px;height:400px;margin-left: 140px;">
                                 <thead>
                                 <tr>
                                     <th>
@@ -500,34 +521,21 @@
                                     </th>
                                 </tr>
                                 </thead>
-                                <tbody th:each="item:${dataByTime}">
-                                <tr>
-                                    <td id="td11" th:text="${item.getDate()}">无数据</td>
-                                    <td th:text="${item.getDevice()}">无数据</td>
-                                    <td th:text="${item.getStop()}">无数据</td>
-                                    <td th:text="${item.getOperate()}">无数据</td>
-                                    <td th:text="${item.getFree()}">无数据</td>
-                                    <td th:text="${item.getOffline()}">无数据</td>
-                                    <td th:text="${item.getSetting()}">无数据</td>
-                                </tr>
-                                </tbody>
+
+                                    <tbody th:each="item:${dataByTime}">
+                                    <tr>
+                                        <td id="td11" th:text="${item.getDate()}">无数据</td>
+                                        <td th:text="${item.getDevice()}">无数据</td>
+                                        <td th:text="${item.getStop()}">无数据</td>
+                                        <td th:text="${item.getOperate()}">无数据</td>
+                                        <td th:text="${item.getFree()}">无数据</td>
+                                        <td th:text="${item.getOffline()}">无数据</td>
+                                        <td th:text="${item.getSetting()}">无数据</td>
+                                    </tr>
+                                    </tbody>
+                                </div>
+
                             </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="page-title-box d-flex align-items-center justify-content-between">
-                        <h5 class="mb-0">产量计数分析</h5></div>
-                    <hr>
-                    <div class="card">
-                        <div class="card-body">
-                            <!--                        <h4 class="card-title mb-4">整线小时产量</h4>-->
-                            <div id="outputAnalysis" style="width: 800px; height: 300px; margin: 50px auto auto;">画图</div>
                         </div>
                     </div>
                 </div>
@@ -595,18 +603,6 @@
                                         <td th:text="${#dates.format(item.getPlannedend(),'yyyy-MM-dd HH:mm:ss')}">x</td>
                                         <td th:text="${#dates.format(item.getActualstart(),'yyyy-MM-dd HH:mm:ss')}">x</td>
                                         <td th:text="${#dates.format(item.getActualend(),'yyyy-MM-dd HH:mm:ss')}">x</td>
-                                        <!--                                            <td>-->
-                                        <!--                                                <div class="badge badge-soft-success font-size-12">正常</div>-->
-                                        <!--                                            </td>-->
-                                        <!--                                            <td><a href="javascript:void(0);" class="mr-3 text-primary"-->
-                                        <!--                                                   data-toggle="tooltip" data-placement="top" title=""-->
-                                        <!--                                                   data-original-title="Edit"><i-->
-                                        <!--                                                    class="mdi mdi-pencil font-size-18"></i></a><a-->
-                                        <!--                                                    href="javascript:void(0);" class="text-danger" data-toggle="tooltip"-->
-                                        <!--                                                    data-placement="top" title="" data-original-title="Delete"><i-->
-                                        <!--                                                    class="mdi mdi-trash-can font-size-18"></i></a></td>-->
-                                        <!--                                        </tr>-->
-
                                     </tbody>
                                 </table>
 
@@ -617,6 +613,19 @@
                 </div>
             </div>
 
+<!--            <div class="row">-->
+<!--                <div class="col-lg-12">-->
+<!--                    <div class="page-title-box d-flex align-items-center justify-content-between">-->
+<!--                        <h5 class="mb-0">产量计数分析</h5></div>-->
+<!--                    <hr>-->
+<!--                    <div class="card">-->
+<!--                        <div class="card-body">-->
+<!--                            &lt;!&ndash;                        <h4 class="card-title mb-4">整线小时产量</h4>&ndash;&gt;-->
+<!--                            <div id="outputAnalysis" style="width: 800px; height: 300px; margin: 50px auto auto;"></div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
 
         </div>
     </div>
