--- a/src/main/resources/templates/cutter.html
+++ b/src/main/resources/templates/cutter.html
@@ -62,7 +62,7 @@
                                     </div>
                                 </div>
 
-                                <div class="table-responsive">
+                                <div class="table-responsive" style="max-height: 450px;">
                                     <table class="table table-centered datatable dt-responsive nowrap table-bordered border"
                                            style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                         <thead class="thead-light">
@@ -175,20 +175,24 @@
                         <div class="card">
                             <span class="btn-warning   ri-file-warning-line" style="font-size: larger;color: white;margin: 10px;text-align: center">&nbsp;刀具警告数量：<span style="font-size: x-large" th:text="${sum_warnings}"></span></span>
                             <p style="margin: 10px">警告编号：</p>
+                            <div  style="max-height:200px;overflow-y:auto">
                             <ul th:each="warning:${warnings}">
                                 <li style="height: 5px" th:text="${warning}"></li>
                             </ul>
-                            <p></p>
+                                </br>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card">
                             <span class="btn-danger  ri-file-warning-fill" style="font-size: larger;color: white;margin: 10px;text-align: center">&nbsp;刀具报警数量：<span style="font-size: x-large" th:text="${sum_aralms}"></span></span>
                             <p style="margin: 10px">报警编号：</p>
+                            <div  style="max-height:200px;overflow-y:auto">
                             <ul th:each="aralm:${aralms}">
                                 <li style="height: 5px" th:text="${aralm}"></li>
                             </ul>
-                            <p></p>
+                                </br>
+                            </div>
                         </div>
                     </div>
                 </div>
