云端数据展示页面更改（data_index.html）

--- a/src/main/resources/templates/cloudPages/detail_plan.html
+++ b/src/main/resources/templates/cloudPages/detail_plan.html
@@ -153,20 +153,68 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td>Tiger Nvimn</td>
-                                        <td>System Architect</td>
-                                        <td>Edinburgh</td>
-                                        <td>61</td>
-                                        <td>2011/04/25</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
+                                        <td>加工</td>
+                                        <td>1</td>
+                                        <td>plan1</td>
+                                        <td>暂停</td>
+                                        <td>无锡职业技术学院</td>
+                                        <td>5</td>
+                                        <td>3</td>
+                                        <td>2</td>
+                                        <td>无</td>
+                                        <td>20452</td>
+                                        <td>2022-03-02 15:33:59</td>
+                                        <td>2022-03-02 16:34:01</td>
+                                        <td>2022-03-02 13:34:11</td>
+                                        <td>2022-03-02 14:34:17</td>
+                                    </tr>
+                                    <tr>
+                                        <td>加工</td>
+                                        <td>3</td>
+                                        <td>plan2</td>
+                                        <td>完成</td>
+                                        <td>无锡职业技术学院</td>
+                                        <td>10</td>
+                                        <td>8</td>
+                                        <td>2</td>
+                                        <td>无</td>
+                                        <td>21402</td>
+                                        <td>2022-03-03 13:28:39</td>
+                                        <td>2022-03-03 13:29:59</td>
+                                        <td>2022-03-03 13:28:39</td>
+                                        <td>2022-03-03 13:28:49</td>
+                                    </tr>
+                                    <tr>
+                                        <td>加工</td>
+                                        <td>4</td>
+                                        <td>plan4</td>
+                                        <td>暂停</td>
+                                        <td>无锡职业技术学院</td>
+                                        <td>5</td>
+                                        <td>4</td>
+                                        <td>1</td>
+                                        <td>无</td>
+                                        <td>23212</td>
+                                        <td>2022-03-05 10:33:59</td>
+                                        <td>2022-03-05 11:34:01</td>
+                                        <td>2022-03-05 10:34:11</td>
+                                        <td>2022-03-05 11:34:17</td>
+                                    </tr>
+                                    <tr>
+                                        <td>加工</td>
+                                        <td>5</td>
+                                        <td>plan2</td>
+                                        <td>完成</td>
+                                        <td>无锡职业技术学院</td>
+                                        <td>5</td>
+                                        <td>3</td>
+                                        <td>2</td>
+                                        <td>无</td>
+                                        <td>70452</td>
+                                        <td>2022-03-08 18:53:59</td>
+                                        <td>2022-03-08 18:54:01</td>
+                                        <td>2022-03-08 19:34:11</td>
+                                        <td>2022-03-08 19:54:17</td>
                                     </tr>
                                     </tbody>
                                 </table>
