--- a/src/main/resources/templates/cloudPages/detail_time.html
+++ b/src/main/resources/templates/cloudPages/detail_time.html
@@ -168,42 +168,59 @@
                                     <!--											<td th:text="${item.getSetting()}">无数据</td>-->
                                     <!--										</tr>-->
                                     <tr>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
+                                        <td>2022-03-11</td>
+                                        <td>OP40-车床</td>
+                                        <td>0.00%</td>
+                                        <td>0.00%</td>
+                                        <td>99.56%</td>
+                                        <td>0.06%</td>
+                                        <td>0.36%</td>
                                     </tr>
                                     <tr>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
+                                        <td>2022-03-11</td>
+                                        <td>OP50-车床</td>
+                                        <td>24.50%</td>
+                                        <td>0.00%</td>
+                                        <td>79.56%</td>
+                                        <td>0.06%</td>
+                                        <td>0.06%</td>
                                     </tr>
                                     <tr>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
+                                        <td>2022-03-11</td>
+                                        <td>OP60-立加</td>
+                                        <td>0.00%</td>
+                                        <td>0.00%</td>
+                                        <td>1.86%</td>
+                                        <td>98.06%</td>
+                                        <td>0.02%</td>
                                     </tr>
                                     <tr>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
-                                        <td>$320,800</td>
+                                        <td>2022-03-11</td>
+                                        <td>OP70-立加</td>
+                                        <td>0.00%</td>
+                                        <td>6.70%</td>
+                                        <td>92.56%</td>
+                                        <td>0.06%</td>
+                                        <td>0.43%</td>
                                     </tr>
-                                    </tbody>
+                                    <tr>
+                                        <td>2022-03-11</td>
+                                        <td>测量机</td>
+                                        <td>0.00%</td>
+                                        <td>23.70%</td>
+                                        <td>45.56%</td>
+                                        <td>33.06%</td>
+                                        <td>0.48%</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-03-11</td>
+                                        <td>总控PLC-1</td>
+                                        <td>34.94%</td>
+                                        <td>23.70%</td>
+                                        <td>0.00%</td>
+                                        <td>0.00%</td>
+                                        <td>45.48%</td>
+                                    </tr>
                                     </tbody>
                                 </table>
                             </div>
