--- a/src/main/resources/templates/cloudPages/data_index.html
+++ b/src/main/resources/templates/cloudPages/data_index.html
@@ -464,7 +464,7 @@
                                 title: {
                                     text: '设备稼动率',
                                     textStyle: {
-                                        color: '#95a0b1'
+                                        color: '#fdffdb'
                                     },
                                 },
 
@@ -484,7 +484,7 @@
                                         saveAsImage: {show: true}
                                     },
                                     iconStyle: {
-                                        borderColor: "#ffe300",
+                                        borderColor: "#d8ee12",
                                     },
                                 },
                                 calculable: true,
@@ -495,10 +495,10 @@
                                         axisLabel: {
                                             show: true,
                                             lineStyle: {
-                                                color: '#95a0b1',//更改坐标轴颜色
+                                                color: '#fffbf3',//更改坐标轴颜色
                                             },
                                             textStyle: {
-                                                color: '#95a0b1',  //更改坐标轴文字颜色
+                                                color: '#c1ffe6',  //更改坐标轴文字颜色
                                             }
                                         },
                                     }
@@ -509,10 +509,10 @@
                                         axisLabel: {
                                             show: true,
                                             lineStyle: {
-                                                color: '#95a0b1',//更改坐标轴颜色
+                                                color: '#f2f7ff',//更改坐标轴颜色
                                             },
                                             textStyle: {
-                                                color: '#95a0b1',  //更改坐标轴文字颜色
+                                                color: '#c1ffe6',  //更改坐标轴文字颜色
                                             }
                                         },
                                     }
@@ -531,6 +531,9 @@
                                         data: [
                                             {type: 'average', name: '平均值'}
                                         ]
+                                    },
+                                    itemStyle: {
+                                        color: '#80fffb',  //更改柱状图颜色
                                     }
                                 }
                             };
